[fix error] savebar - savebar getting out of view fixed

--- a/src/components/SaveBar/_SaveBar.scss
+++ b/src/components/SaveBar/_SaveBar.scss
@@ -17,6 +17,8 @@
     padding: 10px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+
 
     max-height: 50vh;
     overflow-y: scroll;
@@ -46,7 +48,7 @@
   position: relative;
   display: flex;
   justify-content: center;
-
+  width: 70px;
   &:first-child {
     margin-top: 0;
   }
