--- a/src/pages/pages.scss
+++ b/src/pages/pages.scss
@@ -20,7 +20,7 @@
 
 @media all and (max-width: 950px) {
   .home{
-    width: 800px;
+    width: 98vw;
 }
 }
 @media all and (max-width: 650px) {
